Class Method run() Assignment of Boolean Object to resultData via Boolean.valueOf() Instead of Creating New Boolean Object.